@@ -1,3 +1,7 @@
+2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm (_get_state): Lookupo label in tapelist
+	  file if it is not availbale in bc2lb.
+
 2014-04-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scan.pm: Do not se the same tape twice in the same
 	  run.
